# sugars

./: .gitignore  CARGO_HAKARI.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  justfile
.config/: hakari.toml  nextest.toml
cargo-template/: Cargo.toml
docs/: ARRAY_TUPLE_SYNTAX.md  ASYNC_TASK.md  CHUNK_HANDLER.md  ONE_OR_MANY.md  ZERO_ONE_OR_MANY.md
examples/: README.md  ai_agent_builder.rs
examples/array_tuple_syntax/: Cargo.toml  TODO.md
examples/array_tuple_syntax/src/: main.rs
examples/async_task_example/: Cargo.toml
examples/async_task_example/src/: main.rs
examples/one_or_many_example/: Cargo.toml
examples/one_or_many_example/src/: main.rs
examples/zero_one_or_many_example/: Cargo.toml
examples/zero_one_or_many_example/src/: main.rs
src/: lib.rs
src/async/: emitter_builder.rs  future_ext.rs  mod.rs  result_types.rs  stream_ext.rs
src/async/stream/: crossbeam.rs  mod.rs  std.rs  tokio.rs
src/builders/: mod.rs
src/collections/: byte_size.rs  json_ext.rs  mod.rs  one_or_many.rs  zero_one_or_many.rs
src/macros/: closures.rs  collections.rs  mod.rs
tests/: async_features.rs  collections_features.rs  feature_combinations.rs  gix_interop_features.rs  macros_features.rs
workspace-hack/: .gitattributes  Cargo.toml  build.rs
workspace-hack/src/: lib.rs
