[package]
name = "sugars-examples"
version.workspace = true
edition.workspace = true
description = "Example implementations demonstrating cyrup_sugars array tuple syntax"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Core sugars functionality
sugars_collections = { path = "../../packages/collections" , version = "0.5.2" }
sugars_builders = { path = "../../packages/builders" , version = "0.5.2" }
sugars_llm = { path = "../../packages/llm" , version = "0.5.2" }
cyrup_sugars = { path = "../../packages/cyrup-sugars", features = ["tokio-async", "array-tuples"] , version = "0.5.2" }
sugars_macros = { path = "../../packages/macros" , version = "0.5.2" }

# Required for array tuple syntax
hashbrown = { version = "0.15", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for examples
tokio = { version = "1", features = ["full", "macros"] }

[features]
default = ["array-tuples"]
array-tuples = ["sugars_collections/array-tuples", "sugars_builders/array-tuples"]
