[package]
name = "async_task_example"
version.workspace = true
edition.workspace = true
description = "Example demonstrating AsyncTask usage for zero-allocation async operations"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
sugars_async_task = { path = "../../packages/async_task" , version = "0.5.5" }
sugars_collections = { path = "../../packages/collections" , version = "0.5.5" }
