[package]
name = "zero_one_or_many_example"
version.workspace = true
edition.workspace = true
description = "Example demonstrating ZeroOneOrMany collection type for optional multi-value fields"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
sugars_collections = { path = "../../packages/collections" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = { version = "0.15.4", features = ["serde"] }
